--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,13 +24,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # 4. 代码检查
-      - name: Run lint
-        run: npm run lint
+      # # 4. 代码检查
+      # - name: Run lint
+      #   run: npm run lint
 
-      # 5. 单元测试
-      - name: Run tests
-        run: npm test
+      # # 5. 单元测试
+      # - name: Run tests
+      #   run: npm test
 
       # 6. 构建项目
       - name: Build the app
