--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "preview": "vite preview",
     "build": "vite build",
-    "preview": "vite preview"
+    "build:prod": "vite build --mode prod",
+    "build:dev": "vite build --mode dev"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
