--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -31,7 +31,7 @@ jobs:
         run: npm i  # 第三步：安装依赖
 
       - name: Build project
-        run: npm run build  # 第四步：构建项目，生成 dist 目录
+        run: npm run build:test  # 第四步：构建项目，生成 dist 目录
 
       - name: Upload dist to server via SCP
         uses: appleboy/scp-action@v0.1.4  # 第五步：通过 SCP 上传 dist 文件到服务器
